# groove-analyzer

./: README.md  analyze_grooves.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py
docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md
examples/: analyze_grooves.py  analyze_single.py  basic_groove.py  compare_genres.py  edm_groove.mid  funk_groove.mid  groove_comparison.py  hip_hop_groove.mid  jazz_groove.mid  latin_groove.mid  syncopation.py  synthesize_and_analyze.py  visualize_funnel.py
examples/examples/: edm_groove.mid  funk_groove.mid  hip_hop_groove.mid  jazz_groove.mid  latin_groove.mid
examples/report/: GROOVE_REPORT.md  report.json
groove_analyzer/: __init__.py  deadband_groove.py  exceptions.py  genres.py  microtiming.py  visualize.py
groove_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
report/: GROOVE_REPORT.md  report.json
tests/: test_comprehensive.py  test_microtiming.py  test_visualize.py
