[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groove-analyzer"
version = "0.1.0"
description = "Prove groove = deadband funnel via MIDI microtiming analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Groove Analyzer Team"},
]
keywords = ["midi", "groove", "microtiming", "deadband", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mido>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pylint>=3.0",
]

[project.urls]
Homepage = "https://github.com/groove-analyzer/groove-analyzer"
Repository = "https://github.com/groove-analyzer/groove-analyzer"

[tool.setuptools.packages.find]
where = ["."]
include = ["groove_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "invalid-name",
]
